style-fix: border color, gap

--- a/src/components/InfoList/InfoList.module.scss
+++ b/src/components/InfoList/InfoList.module.scss
@@ -186,6 +186,7 @@
         width: 100%;
         &:not(:first-child) {
           margin-left: 0px;
+          margin-top: 5px;
         }
         .inneritem {
           padding: 10px;
