--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -28,7 +28,7 @@
 
   width: max-content;
   padding: 10px 25px;
-  border: 1px solid transparent;
+  border: 1px solid rgb(38, 62, 102);
   border-image: rgb(38, 62, 102);
   border-image: linear-gradient(
     30deg,
